@@ -183,8 +183,9 @@ or with device filesystems re-generated by an OS for every reboot.
 
 *debug_min* 'INTEGER'::
 
-Optional.  Specify a minimum debug level for all driver daemons, e.g. for
-troubleshooting a deployment, without impacting foreground or background
+Optional.  Specify a minimum debug level for all driver daemons and
+for the linkman:upsdrvctl[8] tool, e.g. for troubleshooting a deployment
+without changing init scripts, without impacting foreground or background
 running mode directly. Command-line option `-D` can only increase this
 verbosity level.
 
