@@ -92,6 +92,17 @@ static char	*pt_root = NULL, *pt_user = NULL, *pt_cmd = NULL;
 static int	nut_debug_level_passthrough = 0;
 static int	nut_foreground_passthrough = -1;
 
+/* Users can pass a -D[...] option to enable debugging.
+ * For the service tracing purposes, also the ups.conf
+ * can define a debug_min value in the global or device
+ * section, to set the minimal debug level (CLI provided
+ * value less than that would not have effect, can only
+ * have more). Finally, it can also be set over socket
+ * protocol, taking precedence over other inputs.
+ */
+static int	nut_debug_level_args = -1;
+static int	nut_debug_level_global = -1;
+
 /* Keep track of requested operation (function pointer) */
 static void	(*command)(const ups_t *) = NULL;
 
@@ -106,6 +117,28 @@ static int	signal_flag = 0;
 #else	/* WIN32 */
 static char	*signal_flag = NULL;
 #endif	/* WIN32 */
+
+/* Reduced version of code from drivers/main.c */
+static void assign_debug_level(void) {
+	/* CLI debug level can not be smaller than debug_min specified
+	 * in ups.conf, and for upsdrvctl tool we care about the global
+	 * value (not any specified for a driver config section).
+	 * Note that a non-zero debug_min does not impact foreground
+	 * running mode.
+	 */
+
+	/* At minimum, use the verbosity we started with - via CLI
+	 * arguments; but maybe a greater debug_min is set in current
+	 * config file.
+	 */
+	nut_debug_level = nut_debug_level_args;
+	if (nut_debug_level_global > nut_debug_level) {
+		/* Applying debug_min=%d from ups.conf global section */
+		nut_debug_level = nut_debug_level_global;
+	}
+
+	upsdebugx(1, "debug level for upsdrvctl is '%d'", nut_debug_level);
+}
 
 void do_upsconf_args(char *arg_upsname, char *var, char *val)
 {
@@ -139,6 +172,22 @@ void do_upsconf_args(char *arg_upsname, char *var, char *val)
 			} else {
 				waitfordrivers = 0;
 			}
+		}
+
+		/* Allow to specify its minimal debugging level for all drivers -
+		 * or the upsdrvctl tool here - and admins can set more with
+		 * command-line args, but can't set less without changing config.
+		 * Should help debug of services.
+		 */
+		if (!strcasecmp(var, "debug_min")) {
+			int lvl = -1; /* typeof common/common.c: int nut_debug_level */
+			if ( str_to_int (val, &lvl, 10) && lvl >= 0 ) {
+					nut_debug_level_global = lvl;
+			} else {
+					upslogx(LOG_INFO, "WARNING : Invalid debug_min value found in ups.conf global settings");
+			}
+
+			return;
 		}
 
 		/* ignore anything else - it's probably for main */
@@ -897,7 +946,8 @@ static void status_driver(const ups_t *ups)
 #ifndef WIN32
 	snprintf(pidfn, sizeof(pidfn), "%s/%s-%s.pid", altpidpath(), ups->driver, ups->upsname);
 	pidFromFile = parsepidfile(pidfn);
-	if (pidFromFile >= 0) {                                                                                                                                                                                                                       /* this method actively reports errors, if any */
+	if (pidFromFile >= 0) {
+		/* this method actively reports errors, if any */
 		cmdret = sendsignalpid(pidFromFile, 0, ups->driver, 1);
 		/* returns zero for a successfully sent signal */
 		if (cmdret == 0)
@@ -1509,7 +1559,9 @@ int main(int argc, char **argv)
 				exit(EXIT_SUCCESS);
 
 			case 'D':
-				nut_debug_level++;
+				if (nut_debug_level_args < 0)
+					nut_debug_level_args = 0;
+				nut_debug_level_args++;
 				break;
 
 			case 'd':
@@ -1607,10 +1659,10 @@ int main(int argc, char **argv)
 		char *s = getenv("NUT_DEBUG_LEVEL");
 		int l;
 		if (s && str_to_int(s, &l, 10)) {
-			if (l > 0 && nut_debug_level < 1) {
+			if (l > 0 && nut_debug_level_args < 1) {
 				upslogx(LOG_INFO, "Defaulting debug verbosity to NUT_DEBUG_LEVEL=%d "
 					"since none was requested by command-line options", l);
-				nut_debug_level = l;
+				nut_debug_level_args = l;
 			}	/* else follow -D settings */
 		}	/* else nothing to bother about */
 	}
@@ -1660,6 +1712,18 @@ int main(int argc, char **argv)
 	if (!command)
 		fatalx(EXIT_FAILURE, "Error: unrecognized command [%s]", argv[0]);
 
+#ifndef WIN32
+	driverpath = xstrdup(DRVPATH);	/* set default */
+#else	/* WIN32 */
+	driverpath = getfullpath2(DRVPATH, PATH_BIN); /* Can get converted to relative path in WIN32 */
+#endif	/* WIN32 */
+
+	atexit(exit_cleanup);
+
+	read_upsconf(1);
+
+	assign_debug_level();
+
 	if (nut_debug_level_passthrough == 0 && (command == &start_driver || command == &shutdown_driver)) {
 		upsdebugx(2, "\n"
 			"If you're not a NUT core developer, chances are that you're told to enable debugging\n"
@@ -1672,16 +1736,6 @@ int main(int argc, char **argv)
 			"Alternately, provide an additional '-d' (lower-case) parameter to 'upsdrvctl' to\n"
 			"pass its current debug level to the launched driver, and '-B' keeps it backgrounded.\n");
 	}
-
-#ifndef WIN32
-	driverpath = xstrdup(DRVPATH);	/* set default */
-#else	/* WIN32 */
-	driverpath = getfullpath2(DRVPATH, PATH_BIN); /* Can get converted to relative path in WIN32 */
-#endif	/* WIN32 */
-
-	atexit(exit_cleanup);
-
-	read_upsconf(1);
 
 	if (argc == lastarg) {
 		ups_t	*tmp = upstable;
